// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommendFeed component renders elements by default 1`] = `
<div>
  <form
    className="CommentFeed__form"
    onSubmit={[Function]}
  >
    <input
      className="CommentFeed__input"
      id="newComment"
      onChange={[Function]}
      placeholder="Add a comment..."
      type="text"
      value=""
    />
    <button
      className="CommentFeed__button"
      type="submit"
    >
      Post
    </button>
  </form>
</div>
`;

exports[`CommendFeed component renders elements given props 1`] = `
<div>
  <Comment
    key="56532f9e-8022-4759-b134-b7269d510689"
    text="comment text 1"
    timestamp="a few seconds ago"
  />
  <form
    className="CommentFeed__form"
    onSubmit={[Function]}
  >
    <input
      className="CommentFeed__input"
      id="newComment"
      onChange={[Function]}
      placeholder="Add a comment..."
      type="text"
      value=""
    />
    <button
      className="CommentFeed__button"
      type="submit"
    >
      Post
    </button>
  </form>
</div>
`;
